--- a/Lab03-03-WindowForm-Application.ipynb
+++ b/Lab03-03-WindowForm-Application.ipynb
@@ -453,6 +453,17 @@
     "4. ถ้าใส่อักษรที่ไม่ใช่ตัวเลขลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n",
     "5. ถ้าใส่เลขทศนิยมลงในช่อง A หรือ B แล้วกด Add จะเกิดอะไรขึ้น\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.ผลลัพธ์ใน textBox_C เป็น \"0\"\n",
+    "2.ผลลัพธ์ใน textBox_C เป็น \"0\"\n",
+    "3.ผลลัพธ์ใน textBox_C เป็น \"0\"\n",
+    "4.ผลลัพธ์ใน textBox_C เป็น \"0\"\n",
+    "5.ผลรวมของเลขทศนิยมทั้งสองจะถูกแสดงใน textBox_C"
+   ]
   }
  ],
  "metadata": {
